# GraphAuth

./: .gitignore  0001-Added-in-GraphAuth-support.patch  Makefile  Makefile.am  NOTICE  README  configure.ac
dbus-service/: Makefile  ga_dbus.h  ga_obj.c  graph_auth.h  interface.xml  service.c
gobj/: Makefile  graph_auth.c  graph_auth.h  run.sh  test.js
js/: Makefile.am  chk_auth.js  graphAuth.js  graphAuthPrompt.js  js-resources.gresource.xml  passwd.js
pam/: Makefile  Makefile.am  gdm-graph  pam_graph.c  pam_graph.h
pam_gobject/: Makefile  Makefile.am  graph_auth.c  graph_auth.h  test.js
passwd/: Makefile.am  Makefile.in  a.out  main.c
